--- a/Install
+++ b/Install
@@ -30,16 +30,9 @@ if [[ -e /etc/debian_version ]]; then
 	RCLOCAL='/etc/rc.local'
 
 	if [[ "$VERSION_ID" != 'VERSION_ID="7"' ]] && [[ "$VERSION_ID" != 'VERSION_ID="8"' ]] && [[ "$VERSION_ID" != 'VERSION_ID="9"' ]] && [[ "$VERSION_ID" != 'VERSION_ID="14.04"' ]] && [[ "$VERSION_ID" != 'VERSION_ID="16.04"' ]] && [[ "$VERSION_ID" != 'VERSION_ID="17.04"' ]]; then
-    echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo ""              
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 		echo "เวอร์ชั่น OS ของคุณเป็นเวอร์ชั่นที่ยังไม่รองรับ"
 		echo "สำหรับเวอร์ชั่นที่รองรับได้ จะมีดังนี้..."
@@ -51,15 +44,8 @@ if [[ -e /etc/debian_version ]]; then
 	fi
 else
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 	echo "OS ที่คุณใช้ไม่สามารถรองรับได้กับสคริปท์นี้"
 	echo "สำหรับ OS ที่รองรับได้ จะมีดังนี้..."
@@ -82,8 +68,8 @@ clear
                   .        ***********************         .
                   .        True Wallet Account             .
                   .        =======================         .
-                  .        Phone : 097-206-5255            .
-                  .        Name  : Ekkachai Chompoowiset   .
+                  .        Phone : 080-266-2264            .
+                  .        Name  : North                   .
                   ..........................................   
                                       
                            Thank You For Choice TH
@@ -101,7 +87,7 @@ echo ""
 echo ""
 echo " เสียใจด้วย รหัสผิด ถ้าไม่มีรหัสติดต่อแอดมินฯ"
 echo ""
-echo " FB : https://www.facebook.com/ekkachai.2541"
+echo " FB : https://www.facebook.com/groups/456606521389706"
 echo ""
 echo ""
 rm /usr/bin/pass
@@ -117,15 +103,8 @@ NC='\033[0m'
 
 # Menu
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 if [[ -e /usr/local/bin/Check-Thai ]]; then
 	echo -e "ฟังก์ชั่นสคริปท์ ${GRAY}ZENON-AUTO-VPN${NC}"
@@ -289,15 +268,8 @@ if [[ -e /etc/openvpn/server.conf ]]; then
 else
 	clear
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 	read -p "IP Server : " -e -i $IP IP
 	read -p "Port Server : " -e -i 1194 PORT
@@ -467,15 +439,8 @@ exit 0' > $RCLOCAL
 	EXTERNALIP=$(wget -4qO- "http://whatismyip.akamai.com/")
 	if [[ "$IP" != "$EXTERNALIP" ]]; then
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 		echo "ตรวจพบเบื้องหลังเซิฟเวอร์ของคุณเป็น Network Addrsss Translation (NAT)"
 		echo "NAT คืออะไร ? : http://www.greatinfonet.co.th/15396685/nat"
@@ -490,13 +455,22 @@ exit 0' > $RCLOCAL
 		fi
 	fi
 
-	echo "client
+echo "client
 dev tun
 proto $PROTOCOL
 sndbuf 0
 rcvbuf 0
 remote $CLIENT 999 udp
-remote $IP:$PORT@anywhere.truevisions.tv.ps.line.naver.jp.coral.dtac.co.th $PORT
+remote $IP $PORT
+http-proxy-option CUSTOM-HEADER CONNECT HTTP/1.1
+http-proxy-option CUSTOM-HEADER Host Kiatruevisions.tv.line.naver.jp.m.facebook.com
+http-proxy-option CUSTOM-HEADER X-Online-Host Kiatruevisions.tv.line.naver.jp.m.facebook.com
+http-proxy-option CUSTOM-HEADER X-Forward-Host Kiatruevisions.tv.line.naver.jp.m.facebook.com
+http-proxy-option CUSTOM-HEADER Proxy-Authorization Keep-Alive
+http-proxy-option CUSTOM-HEADER Proxy-Connection Keep-Alive
+http-proxy-option CUSTOM-HEADER Connection Keep-Alive
+http-proxy-option CUSTOM-HEADER User-Agent [ua]
+http-proxy-timeout 5
 http-proxy $IP $PROXY
 resolv-retry infinite
 nobind
@@ -683,16 +657,9 @@ fi
 	esac
 	clear
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
-	echo ""
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
+    echo ""
 	echo "OpenVPN, Squid Proxy, Nginx .....Install finish."
 	echo "IP Server : $IP"
 	echo "Port Server : $PORT"
@@ -821,15 +788,8 @@ fi
 if [[ "$NoSquid" = 'N' ]]; then
 	clear
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 	echo "Pritunl .....Install Finish."
 	echo "No Proxy"
@@ -936,15 +896,8 @@ fi
 
 clear
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 echo "Pritunl, Squid Proxy .....Install Finish."
 echo "IP Proxy : $IP"
@@ -973,15 +926,8 @@ elif [[ ! -e /etc/default/dropbear ]]; then
 	PORTSSH=$(grep '^Port ' /etc/ssh/sshd_config | cut -d " " -f 2)
 	clear
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 	echo "SSH Dropbear .....Install Finish."
 	echo "IP Addrsss : $IP"
@@ -1016,15 +962,8 @@ if [[ -e /etc/squid3/squid.conf ]]; then
 	apt-get -y remove --purge squid3
 	clear
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 	echo "Squid Proxy .....Removed."
 	exit
@@ -1032,15 +971,8 @@ elif [[ -e /etc/squid/squid.conf ]]; then
 	apt-get -y remove --purge squid
 	clear
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 	echo "Squid Proxy .....Removed."
 	exit
@@ -1088,15 +1020,8 @@ END
 	fi
 	clear
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 	echo "Squid Proxy .....Install finish."
 	echo "IP Proxy : $IP"
@@ -1140,15 +1065,8 @@ END
 	/etc/init.d/squid restart
 	clear
     echo ""
-    echo " ______ _____  _   _   ___   _   _ "
-    echo "(___  /|  ___)| \ | | / _ \ | \ | |"
-    echo "   / / | |_   |  \| || | | ||  \| |"
-    echo "  / /  |  _)  |     || | | ||     |"
-    echo " / /__ | |___ | |\  || |_| || |\  |"
-    echo "/_____)|_____)|_| \_| \___/ |_| \_|"
-    echo ""                                        
-    echo "#BY FB : Ekkachai Chompoowiset"
-    echo "#Donate : TrueWallet : 097-206-5255"
+    echo "#BY FB : https://www.facebook.com/groups/456606521389706"
+    echo "#Donate : TrueWallet : 080-266-2264"
     echo ""
 	echo "Squid Proxy .....Install finish."
 	echo "IP Proxy : $IP"
